Styling fixes, unshift user from home controller

--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -1,7 +1,7 @@
 .activity, .show {
   background-color: rgba(255, 255, 255, 0.75);
   border-bottom: 1px solid $border-color;
-  padding: 25px;
+  padding: 15px 25px;
 
   .user-info {
     @extend .col-xs-11;
