--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -2,24 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.comments {
-  @extend .col-md-10, .col-md-offset-1;
-  margin-top: 10px;
+.comments-block {
+  background-color: $bg-color;
+  padding: 30px 50px;
+  margin-top: 20px;
 
-  .comment {
-    margin-top: 10px;
-    .avatar {
-      height: 40px;
-      width: 40px;
-    }
-
-    .content {
-      margin-top: 5px;
-      margin-left: 60px;
-    }
+  .avatar {
+    padding: 10px;
   }
-}
 
-.new-comment {
-  margin: 20px 15px;
+  .content {
+    margin-top: 5px;
+    padding-left: 85px;
+  }
 }
